# my-flask-app

LoneUnimportantFactor/: config.py  main.py  pyproject.toml  utils.py
LoneUnimportantFactor/templates/: dashboard.html  index.html  strategies.html
